# Mynydd

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
examples/sph/: compute_density.comp  kernels.comp.kern  main.cpp  shader.comp  test.cpp
examples/sph/src/: boundary_kernel.comp.kern  boundary_krnel.comp.kern  compute_density.comp  compute_particle_state_1.comp  compute_particle_state_2.comp  kernels.comp.kern  main.cpp  mesh.cpp  mesh.hpp  nbr_kernel.comp.kern  scatter_particle_data.comp  sph.cpp  sph.hpp
examples/sph/test/: test.cpp  test_mesh.cpp  test_sph.cpp
examples/sph/utils/: debug_render_sim.py
include/mynydd/: memory.hpp  mynydd.hpp  mynydd.tpp  shader_interop.hpp
include/mynydd/pipelines/: particle_index.hpp  radix_sort.hpp
src/: compute_context.cpp  compute_context.hpp  compute_context.tpp  main.cpp  memory.cpp  mynydd.cpp  shader.comp
src/pipelines/: radix_sort.cpp
src/pipelines/shaders/: build_index_from_sorted_keys.comp  init_range_index.comp  morton_kernels.comp.kern  morton_u32_3d.comp  radix_sort.comp  workgroup_scan.comp
src/shad/: kernels.glsl  shader.comp  shader.glsl
tests/: shader_test_compatibility.h  test_compute.cpp  test_local_mem_sort.cpp  test_morton.cpp  test_morton_helpers.cpp  test_morton_helpers.hpp  test_mynydd.cpp  test_particle_index.cpp  test_radix_sort.cpp  test_shader_kernels.cpp  test_transpose.cpp  test_utils.hpp  test_workgroup_scan.cpp
tests/shad/: shader.comp  shader_double.comp
tests/shaders/: build_index_from_sorted_keys.comp  histogram.comp  histogram_sort.comp  histogram_sum.comp  morton_kernels.comp.kern  morton_u32_3d.comp  multistep_1.comp  multistep_2.comp  multistep_3.comp  push_constants.comp  radix_sort.comp  shader.comp  shader_barrier.comp  shader_double.comp  shader_loop.comp  shader_uniform.comp  transpose.comp  workgroup_scan.comp
utils/: plot_3d.py
